Add archive module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 json = "^0.12.4"
 glob = "^0.3.0"
 getopts = "^0.2.21"
-zip = "^0.5.13"
 ureq = "^2.1.1"
 byteorder = "^1.4.3"
+flate2 = "^1.0.0"
+tar = "^0.4.35"
